# food-nutrition-leptos

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  Trunk.toml  index.html  tailwind.config.js
src/: main.rs
src/models/entities/: mod.rs  storage_auth_user.rs
src/providers/: mod.rs  providers.rs
src/providers/main_layout_provider/: main_layout_state.rs  mod.rs
src/routes/: mod.rs  page_route.rs  page_routes.rs
src/services/: mod.rs
src/services/media_query/: mod.rs
src/services/storage/: mod.rs
src/services/theme/: mod.rs
src/styles/: main.scss
src/styles/modules/custom/: index.scss
src/utils/: mod.rs
src/utils/media_query/: media_query_util.rs  mod.rs
src/utils/storage/: mod.rs  storage.rs  storage_util.rs
src/utils/string/: mod.rs  string_util.rs
src/utils/theme/: mod.rs  theme_util.rs
src/utils/validators/: auth_validator_util.rs  mod.rs
src/view/: mod.rs
src/view/components/: application.rs  mod.rs
src/view/components/forms/: mod.rs
src/view/components/navigation_menu/: mod.rs  navigation_menu.rs
src/view/components/sidebar_menu/: mod.rs  sidebar_menu.rs
src/view/layouts/: mod.rs  navigation.rs
src/view/layouts/main_layout/: main_layout.rs  mod.rs
src/view/pages/: auth_login_page.rs  auth_logout_page.rs  blank_page.rs  dashboard_page.rs  empty_page.rs  food_data_page.rs  mod.rs
src/view/pages/data/: mod.rs
src/view/pages/particles/: mod.rs  page_content.rs  page_header.rs  page_title.rs
src/view/ui/: mod.rs
src/view/ui/aria/: mod.rs  sr_only.rs
src/view/widgets/: application.rs  mod.rs
(+34 files in other folders)
