[package]
name = "food-nutrition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
leptos = { version = "0.4.2", default-features = false, features = ["csr", "nightly"] }
leptos_icons = { version = "0.0.15", default-features = false, features = ["AiDashboardOutlined", "SiAlwaysdata", "BsClipboard2Data", "SiRust"] }
leptos_router = { version = "0.4.2", default-features = false, features = ["csr", "nightly"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
strum = "0.25.0"
strum_macros = "0.25.1"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Storage", "MediaQueryList", "MediaQueryListEvent"] }
